fix issues3